@@ -1,5 +1,10 @@
 # $Id$
 
+2006-10-04	Konstantin V. Arkhipov
+
+	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
+	on integer's with leading zeros now.
+
 2006-10-02	Konstantin V. Arkhipov
 
 	* meta/builders/SchemaBuilder.class.php: do not generate unsupported
